--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ h6 {
 
 .tagline {
   float: right;
-  color: #666;
+  color: rgb(235, 231, 231);
   font-size: 14px;
   padding-top: 3.5em;
 }
@@ -334,7 +334,7 @@ a.btn {
   width: 100%;
   line-height: 3;
   text-align: center;
-  background: #cc8500;
+  background: rgb(231, 231, 231);
   position: absolute;
   color: #fff;
   left: 0;
