--- a/css/API/style.css
+++ b/css/API/style.css
@@ -19,7 +19,7 @@ html {
 h6 {
   text-align: center;
   padding: 1.5rem 2.5rem;
-  background-image: linear-gradient(120deg, #fbc2eb 0%, #a6c1ee 100%);
+  background-image: linear-gradient(120deg, #88c74a 0%, #88c74a 100%);
   margin: 0 0 2rem 0;
   font-size: 1.5rem;
   color: white;
@@ -68,13 +68,13 @@ h6 {
 }
 
 .card:nth-child(2n) h6 {
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-image: linear-gradient(120deg, #88c74a 0%, #88c74a 100%);
 }
 
 .card:nth-child(4n) h6 {
-  background-image: linear-gradient(120deg, #ff9a9e 0%, #fecfef 100%);
+  background-image: linear-gradient(120deg, #88c74a 0%, #88c74a 100%);
 }
 
 .card:nth-child(5n) h6 {
-  background-image: linear-gradient(120deg, #ffc3a0 0%, #ffafbd 100%);
+  background-image: linear-gradient(120deg, #88c74a 0%, #88c74a 100%);
 }
