--- a/css/API/style.css
+++ b/css/API/style.css
@@ -31,10 +31,11 @@ h6 {
   max-width: 100%;
 } */
 
-/* p {
+p {
   padding: 0 2.5rem 2.5rem;
   margin: 0;
-} */
+  
+}
 
 .containers {
   display: flex;
