--- a/css/API/style.css
+++ b/css/API/style.css
@@ -42,6 +42,19 @@ img {
 }
 
 .card {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  border: 1px solid #ebebeb;
+  position: relative;
+  z-index: 6;
+  transition: 0.3s ease;
+  margin-bottom: 30px;
+
+
   margin: 1rem;
   background: white;
   box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.1);
