--- a/css/API/style.css
+++ b/css/API/style.css
@@ -19,7 +19,68 @@ html {
 h6 {
   text-align: center;
   padding: 1.5rem 2.5rem;
-  background-image: linear-gradient(120deg, #88c74a 0%, #88c74a 100%);
+  margin: 0 0 2rem 0;
+  font-size: 1.5rem;
+  color: white;
+
+  border-bottom-color: rgb(37, 37, 37);
+  border-bottom-style: none;
+  border-bottom-width: 0px;
+  border-image-outset: 0;
+  border-image-repeat: stretch;
+  border-image-slice: 100%;
+  border-image-source: none;
+  border-image-width: 1;
+  border-left-color: rgb(37, 37, 37);
+  border-left-style: none;
+  border-left-width: 0px;
+  border-right-color: rgb(37, 37, 37);
+  border-right-style: none;
+  border-right-width: 0px;
+  border-top-color: rgb(37, 37, 37);
+  border-top-style: none;
+  border-top-width: 0px;
+  box-sizing: border-box;
+  color: rgb(37, 37, 37);
+  display: block;
+  font-family: "Cera Pro Medium";
+  font-feature-settings: normal;
+  font-kerning: auto;
+  font-language-override: normal;
+  font-optical-sizing: auto;
+  font-size: 20px;
+  font-size-adjust: none;
+  font-stretch: 100%;
+  font-style: normal;
+  font-variant: normal;
+  font-variant-alternates: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-ligatures: normal;
+  font-variant-numeric: normal;
+  font-variant-position: normal;
+  font-variation-settings: normal;
+  font-weight: 500;
+  line-height: 20px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+  text-align: left;
+  transition-delay: 0s;
+  transition-duration: 0.4s;
+  transition-property: all;
+  transition-timing-function: ease;
+  vertical-align: baseline;
+}
+
+p {
+  text-align: center;
+  padding: 1.5rem 2.5rem;
   margin: 0 0 2rem 0;
   font-size: 1.5rem;
   color: white;
@@ -78,6 +139,28 @@ h6 {
   transition-timing-function: ease;
   vertical-align: baseline;
 }
+
+.card:hover .product-select button {
+  transform: scale(1) translateY(-20px);
+}
+
+.card .product-select {
+  position: absolute;
+  transition: 0.3s ease;
+  top: 100%;
+  z-index: 5;
+  bottom: 0;
+}
+.card .product-select button {
+  height: 40px;
+  width: 40px;
+  transform: scale(0) translateY(0px);
+  transiton: 0.4s;
+}
+/* 
+.product-select{
+  display: none;
+} */
 
 /* img {
   display: block;
@@ -144,12 +227,19 @@ img {
   .card {
     flex: 1 1 calc(50% - 2rem);
   }
+
 }
 
 @media screen and (min-width: 900px) {
   .card {
     flex: 1 1 calc(33% - 2rem);
   }
+
+  .product-select {
+    display: none;
+  }
+
+
 }
 /* 
 .card:nth-child(2n) h6 {
