--- a/css/API/style.css
+++ b/css/API/style.css
@@ -148,7 +148,7 @@ p {
   position: absolute;
   transition: 0.3s ease;
   top: 100%;
-  z-index: 5;
+  z-index: 6;
   bottom: 0;
 }
 .card .product-select button {
@@ -157,11 +157,12 @@ p {
   transform: scale(0) translateY(0px);
   transiton: 0.4s;
 }
-/* 
-.product-select{
-  display: none;
-} */
 
+.product-select {
+
+  font-size: 1.5rem;
+  color: white;
+}
 /* img {
   display: block;
   margin: 1rem auto;
@@ -227,19 +228,12 @@ img {
   .card {
     flex: 1 1 calc(50% - 2rem);
   }
-
 }
 
 @media screen and (min-width: 900px) {
   .card {
     flex: 1 1 calc(33% - 2rem);
   }
-
-  .product-select {
-    display: none;
-  }
-
-
 }
 /* 
 .card:nth-child(2n) h6 {
