--- a/css/API/style.css
+++ b/css/API/style.css
@@ -15,8 +15,8 @@ html {
   max-width: 248px;
   max-height: 299px;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: row; */
 }
 
 h6 {
