integrating user registration API

--- a/css/API/style.css
+++ b/css/API/style.css
@@ -10,11 +10,11 @@ html {
   color: #666;
   background: #f6f6f6;
 } */
-
+/* 
 #root {
   max-width: 1200px;
   margin: 0 auto;
-}
+} */
 
 h6 {
   text-align: center;
