integrating user registration API

--- a/assets/css/custom_bootstrap.css
+++ b/assets/css/custom_bootstrap.css
@@ -759,6 +759,13 @@ pre {
   margin-right: -15px;
   margin-left: -15px; }
 
+  .rowwrap {
+    display: flex;
+    flex-wrap: row wrap;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+}
 .no-gutters {
   margin-right: 0;
   margin-left: 0; }
