integrating user registration API

--- a/assets/css/custom_bootstrap.css
+++ b/assets/css/custom_bootstrap.css
@@ -766,7 +766,7 @@ pre {
     -ms-flex-flow: row wrap;
     flex-flow: row wrap;
 }
-.no-gutters {
+  .rowwrap .no-gutters{
   margin-right: 0;
   margin-left: 0; }
   .no-gutters > .col,
