--- a/assets/css/materialize.css
+++ b/assets/css/materialize.css
@@ -1092,7 +1092,7 @@
 }
 
 .green {
-  background-color: #4CAF50 !important;
+  background-color: rgb(136, 199, 74) !important;
 }
 
 .green-text {
@@ -5861,10 +5861,6 @@ select:focus {
   outline: 1px solid #c9f3ef;
 }
 
-button:focus {
-  outline: none;
-  background-color: #2ab7a9;
-}
 
 label {
   font-size: 0.8rem;
