--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1403,6 +1403,8 @@ a:focus {
 	Product
 *************************************/
 .product {
+
+
   
   display: flex;
   flex-direction: column;
@@ -1416,6 +1418,18 @@ a:focus {
   margin-bottom: 30px;
 
 }
+
+
+
+
+product-img {
+  max-width: 100%;
+  height: auto;
+}
+
+
+
+
 .product.borderless {
   border: 0;
 }
