Refactor: add margin to h1 in item-category section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6402,6 +6402,9 @@ header.coffee-2
 .items-category {
   padding: 100px 0 60px 0;
 }
+.items-category h1 {
+  margin-bottom: 35px;
+}
 .items-category .product-item {
   width: 100%;
   position: relative;
