--- a/assets/css/materialize.css
+++ b/assets/css/materialize.css
@@ -2129,7 +2129,8 @@
 
 .white-text {
   color: #ffffff !important;
-  font-weight: 600 !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
 }
 
 .transparent {
