--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7880,8 +7880,19 @@ footer.coffee .newletter .newletter_input button:focus {
   }
   footer .footer-credit .footer-creadit_block .payment-method {
     max-width: 150px;
+    
   }
+
 }
+
+
+img.payment-method{
+  height: 60px;
+  width: 140px;
+  border-radius: 10%;
+}
+
+
 
 @media (min-width: 768px) and (max-width: 991px) {
   footer .footer-v2_header .footer-social {
