--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13300,8 +13300,7 @@ form.example input[type=text] {
   padding: 10px;
   font-size: 17px;
   border: 1px solid grey;
-  float: left;
-  width: 80%;
+  width: 90%;
   background: #f1f1f1;
   margin-top: 15px;
   
@@ -13309,8 +13308,8 @@ form.example input[type=text] {
 
 /* Style the submit button */
 form.example button {
-  float: left;
-  width: 20%;
+
+  width: 10%;
   padding: 10px;
   background: #88c74a;
   color: white;
@@ -13318,7 +13317,7 @@ form.example button {
   border: 1px solid #88c74a;
   border-left: none; /* Prevent double borders */
   cursor: pointer;
-  margin-top: 17px;
+  margin-top: -20px;
   
  
 }
@@ -13343,4 +13342,67 @@ form.example::after {
 #foodForm, #UpdatefoodForm {
   width: 400px;
   border: 1px solid #88c74a !important;
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font: 16px Arial;  
+}
+
+/*the container must be positioned relative:*/
+.autocomplete {
+  position: relative;
+  display: inline-block;
+}
+
+input {
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  padding: 10px;
+  font-size: 16px;
+}
+
+input[type=text] {
+  background-color: #f1f1f1;
+  width: 100%;
+}
+
+input[type=submit] {
+  background-color: #88c74a;
+  color: #fff;
+  cursor: pointer;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 70%;
+  left: 0;
+  right: 0;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff; 
+  border-bottom: 1px solid #d4d4d4; 
+}
+
+/*when hovering an item:*/
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; 
+}
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+  background-color: #88c74a !important; 
+  color: #ffffff; 
 }
